# AuLib

./: .travis.yml  .travis.yml~  CMakeLists.txt  README.md  aulib  config.doxygen
audio/: README.md
docs/: README.md
docs/html/: annotated.html  class_audio_base-members.html  class_audio_base.html  class_fourier_table-members.html  class_fourier_table.html  class_func_table-members.html  class_func_table.html  class_oscil-members.html  class_oscil.html  class_oscili-members.html  class_oscili.html  class_oscilic-members.html  class_oscilic.html  class_phasor-members.html  class_phasor.html  class_sample_player-members.html  class_sample_player.html  class_sample_table-members.html  class_sample_table.html  class_sound_in-members.html  class_sound_in.html  class_sound_out-members.html  class_sound_out.html  class_table_read-members.html  class_table_read.html  class_table_readi-members.html  class_table_readi.html  class_table_readic-members.html  class_table_readic.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  functions.html  functions_func.html  hierarchy.html  index.html  menudata.js  struct_saw_table-members.html  struct_saw_table.html  struct_square_table-members.html  struct_square_table.html  (+2 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js
docs/latex/: annotated.tex  class_audio_base.eps  class_audio_base.tex  class_fourier_table.eps  class_fourier_table.tex  class_func_table.eps  class_func_table.tex  class_oscil.eps  class_oscil.tex  class_oscili.eps  class_oscili.tex  class_oscilic.eps  class_oscilic.tex  class_phasor.eps  class_phasor.tex  class_sample_player.eps  class_sample_player.tex  class_sample_table.eps  class_sample_table.tex  class_sound_in.eps  class_sound_in.tex  class_sound_out.tex  class_table_read.eps  class_table_read.tex  class_table_readi.eps  class_table_readi.tex  class_table_readic.eps  class_table_readic.tex  hierarchy.tex  refman.tex  struct_saw_table.eps  struct_saw_table.tex  struct_square_table.eps  struct_square_table.tex  struct_triangle_table.eps  struct_triangle_table.tex
docs/man/man3/: AudioBase.3  FourierTable.3  FuncTable.3  Oscil.3  Oscili.3  Oscilic.3  Phasor.3  SamplePlayer.3  SampleTable.3  SawTable.3  SoundIn.3  SoundOut.3  SquareTable.3  TableRead.3  TableReadi.3  TableReadic.3  TriangleTable.3  _Users_victor_src_classes_aulib_AuLib_src_.3
examples/: CMakeLists.txt  README.md  adsrex.cpp  echo.cpp  echoex.cpp  envelope.cpp  filterex.cpp  fm.cpp  glide.cpp  midisynth.cpp  panning.cpp  ping.cpp  play.cpp  pvoctest.cpp  readtable.cpp  reverb.cpp  ringmod.cpp  sampleplay.cpp  saw.cpp  scoresynth.cpp  sine.cpp  stftest.cpp  test.cpp
examples/midisynth/: README.md
examples/midisynth/midisynth/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.m  main.m  midisynth.cpp  midisynth.h
examples/midisynth/midisynth.xcodeproj/: project.pbxproj
examples/midisynth/midisynth.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/midisynth/midisynth.xcodeproj/project.xcworkspace/xcuserdata/victor.xcuserdatad/: UserInterfaceState.xcuserstate
examples/midisynth/midisynth.xcodeproj/xcuserdata/victor.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
examples/midisynth/midisynth.xcodeproj/xcuserdata/victor.xcuserdatad/xcschemes/: midisynth.xcscheme  xcschememanagement.plist
examples/midisynth/midisynth/Assets.xcassets/AppIcon.appiconset/: Contents.json
examples/midisynth/midisynth/Base.lproj/: Main.storyboard
include/: README.md
include/AuLib/: AuLib.h  BandP.h  BlOsc.h  Delay.h  Expon.h  FourierTable.h  Iir.h  Instrument.h  LowP.h  MidiIn.h  Oscili.h  Oscilic.h  PConv.h  Pan.h  Phasor.h  Pvoc.h  Reson.h  ResonZ.h  Rms.h  SamplePlayer.h  SampleTable.h  Score.h  ScorePlayer.h  SoundIn.h  SoundOut_o.h  Stft.h  TableRead.h  TableReadi.h  Tap.h  ToneHP.h  ToneLP.h  Wintabs.h  fft.h
lib/: README.md  libportmidi.dylib
src/: Adsr.h  AllPass.h  AuLib.h  AudioBase.cpp  AudioBase.h  Balance.cpp  Balance.h  BandP.h  BandR.h  BlOsc.h  CMakeLists.txt  Chn.h  Circular.cpp  Circular.h  Comb.h  Delay.cpp  Delay.h  Envel.cpp  Envel.h  EnvelTable.cpp  EnvelTable.h  Expon.h  Filter.cpp  Filter.h  Fir.h  FourierTable.cpp  FourierTable.h  FuncTable.h  HighP.h  Iir.cpp  Iir.h  Instrument.h  Line.h  LowP.h  MidiIn.cpp  MidiIn.h  Note.cpp  Note.h  Oscil.cpp  Oscil.h  (+48 more)
