
if(NOT LIBSNDFILE)
 message(STATUS "libsndfile was not found, not building examples")
elseif(NOT PORTAUDIO)
 message(STATUS "portaudio was not found, not building examples")
else()
# example programs
message(STATUS "building examples")
add_executable(sine sine.cpp)
target_link_libraries(sine AuLib ${LIBSNDFILE} ${PORTAUDIO})
add_executable(saw saw.cpp)
target_link_libraries(saw AuLib ${LIBSNDFILE} ${PORTAUDIO})
add_executable(sampleplay sampleplay.cpp)
target_link_libraries(sampleplay AuLib ${LIBSNDFILE} ${PORTAUDIO})
add_executable(readtable readtable.cpp)
target_link_libraries(readtable AuLib ${LIBSNDFILE} ${PORTAUDIO})
add_executable(fm fm.cpp)
target_link_libraries(fm AuLib ${LIBSNDFILE} ${PORTAUDIO})
add_executable(panning panning.cpp)
target_link_libraries(panning AuLib ${LIBSNDFILE} ${PORTAUDIO})
add_executable(ringmod ringmod.cpp)
target_link_libraries(ringmod AuLib ${LIBSNDFILE} ${PORTAUDIO})
add_executable(ping ping.cpp)
target_link_libraries(ping AuLib ${LIBSNDFILE} ${PORTAUDIO})
add_executable(envelope envelope.cpp)
target_link_libraries(envelope AuLib ${LIBSNDFILE} ${PORTAUDIO})
add_executable(adsr adsrex.cpp)
target_link_libraries(adsr AuLib ${LIBSNDFILE} ${PORTAUDIO})
add_executable(glide glide.cpp)
target_link_libraries(glide AuLib ${LIBSNDFILE} ${PORTAUDIO})
add_executable(filterex filterex.cpp)
target_link_libraries(filterex AuLib ${LIBSNDFILE} ${PORTAUDIO})
add_executable(play play.cpp)
target_link_libraries(play AuLib ${LIBSNDFILE} ${PORTAUDIO})
add_executable(echoex echoex.cpp)
target_link_libraries(echoex AuLib ${LIBSNDFILE} ${PORTAUDIO})
add_executable(stftest stftest.cpp)
target_link_libraries(stftest AuLib ${LIBSNDFILE} ${PORTAUDIO})
add_executable(pvoctest pvoctest.cpp)
target_link_libraries(pvoctest AuLib ${LIBSNDFILE} ${PORTAUDIO})

# installation targets
INSTALL(TARGETS sampleplay saw readtable sine fm panning ringmod ping
  envelope adsr glide filterex play echoex stftest pvoctest RUNTIME DESTINATION bin
)
endif()
