
# example programs
message(STATUS "building examples")
add_executable(sine sine.cpp)
target_link_libraries(sine AuLib ${LIBSNDFILE} ${PORTAUDIO} ${CMAKE_THREAD_LIBS_INIT})
add_executable(saw saw.cpp)
target_link_libraries(saw AuLib ${LIBSNDFILE} ${PORTAUDIO} ${CMAKE_THREAD_LIBS_INIT})
add_executable(sampleplay sampleplay.cpp)
target_link_libraries(sampleplay AuLib ${LIBSNDFILE} ${PORTAUDIO} ${CMAKE_THREAD_LIBS_INIT})
add_executable(readtable readtable.cpp)
target_link_libraries(readtable AuLib ${LIBSNDFILE} ${PORTAUDIO} ${CMAKE_THREAD_LIBS_INIT})
add_executable(fm fm.cpp)
target_link_libraries(fm AuLib ${LIBSNDFILE} ${PORTAUDIO} ${CMAKE_THREAD_LIBS_INIT})
add_executable(panning panning.cpp)
target_link_libraries(panning AuLib ${LIBSNDFILE} ${PORTAUDIO} ${CMAKE_THREAD_LIBS_INIT})
add_executable(ringmod ringmod.cpp)
target_link_libraries(ringmod AuLib ${LIBSNDFILE} ${PORTAUDIO} ${CMAKE_THREAD_LIBS_INIT})
add_executable(ping ping.cpp)
target_link_libraries(ping AuLib ${LIBSNDFILE} ${PORTAUDIO} ${CMAKE_THREAD_LIBS_INIT})
add_executable(envelope envelope.cpp)
target_link_libraries(envelope AuLib ${LIBSNDFILE} ${PORTAUDIO} ${CMAKE_THREAD_LIBS_INIT})
add_executable(adsr adsrex.cpp)
target_link_libraries(adsr AuLib ${LIBSNDFILE} ${PORTAUDIO} ${CMAKE_THREAD_LIBS_INIT})
add_executable(glide glide.cpp)
target_link_libraries(glide AuLib ${LIBSNDFILE} ${PORTAUDIO} ${CMAKE_THREAD_LIBS_INIT})
add_executable(filterex filterex.cpp)
target_link_libraries(filterex AuLib ${LIBSNDFILE} ${PORTAUDIO} ${CMAKE_THREAD_LIBS_INIT})
add_executable(play play.cpp)
target_link_libraries(play AuLib ${LIBSNDFILE} ${PORTAUDIO} ${CMAKE_THREAD_LIBS_INIT})
add_executable(echoex echoex.cpp)
target_link_libraries(echoex AuLib ${LIBSNDFILE} ${PORTAUDIO} ${CMAKE_THREAD_LIBS_INIT})
add_executable(stftest stftest.cpp)
target_link_libraries(stftest AuLib ${LIBSNDFILE} ${PORTAUDIO} ${CMAKE_THREAD_LIBS_INIT})
add_executable(pvoctest pvoctest.cpp)
target_link_libraries(pvoctest AuLib ${LIBSNDFILE} ${PORTAUDIO} ${CMAKE_THREAD_LIBS_INIT})
if(PORTMIDI)
add_executable(msynth midisynth.cpp)
target_link_libraries(msynth AuLib ${LIBSNDFILE} ${PORTAUDIO}
  ${PORTMIDI} ${PORTIME}  ${CMAKE_THREAD_LIBS_INIT})
INSTALL(TARGETS msynth RUNTIME DESTINATION bin)
endif()
add_executable(ssynth scoresynth.cpp)
target_link_libraries(ssynth AuLib ${LIBSNDFILE} ${PORTAUDIO} ${CMAKE_THREAD_LIBS_INIT})

# installation targets
INSTALL(TARGETS sampleplay saw readtable sine fm panning ringmod ping
  envelope adsr glide filterex play echoex stftest pvoctest ssynth RUNTIME DESTINATION bin
  )
