set(LIBS AuLib ${LIBSNDFILE} ${PORTAUDIO} ${CMAKE_THREAD_LIBS_INIT})

function(build_example NAME SRC)
add_executable(${NAME} ${SRC})
target_link_libraries(${NAME} ${LIBS})
install(TARGETS ${NAME} RUNTIME DESTINATION bin)
endfunction(build_example)

# example programs
message(STATUS "building examples")
build_example(sine sine.cpp)
build_example(saw saw.cpp)
build_example(sampleplay sampleplay.cpp)
build_example(readtable readtable.cpp)
build_example(fm fm.cpp)
build_example(panning panning.cpp)
build_example(ringmod ringmod.cpp)
build_example(ping ping.cpp)
build_example(envelope envelope.cpp)
build_example(adsr adsrex.cpp)
build_example(glide glide.cpp)
build_example(filterex filterex.cpp)
build_example(play play.cpp)
build_example(echoex echoex.cpp)
build_example(stftest stftest.cpp)
build_example(pvoctest pvoctest.cpp)
build_example(ssynth scoresynth.cpp)

if(PORTMIDI)
build_example(msynth midisynth.cpp)
target_link_libraries(msynth ${PORTMIDI} ${PORTIME})
endif()

